hphp/test/zend/bad/ext/reflection/tests/ReflectionExtension_isTemporary.php
<?php
$obj = new ReflectionExtension('reflection');
var_dump($obj->isTemporary());
?>
==DONE==
